deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlock
  labels:
    app: airlock
spec:
  type: ClusterIP
  selector:
    app: airlock
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
